--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,27 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+h1 {
+  @apply text-4xl font-bold text-primary;
+}
+
+h2 {
+  @apply text-3xl font-bold text-primary;
+}
+
+h3 {
+  @apply text-2xl font-bold text-primary;
+}
+
+h4 {
+  @apply text-xl font-bold text-primary;
+}
+
+h5 {
+  @apply text-lg font-semibold text-primary;
+}
+
+h6 {
+  @apply text-base font-semibold text-primary;
+}
